monitoring/controllers/base/grafana/grafana/ingress-middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: grafana
spec:
  redirectScheme:
    scheme: https
    permanent: true
