monitoring/controllers/base/grafana/grafana/ingress-patch.yaml
# grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER_GF_ENDPOINT`)
      priority: 10
      services:
        - kind: Service
          name: grafana
          namespace: observability
          passHostHeader: true
          port: 3000
          responseForwarding:
            flushInterval: 1ms
  tls:
    secretName: grafana-tls
